--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ a.edit-bookmark.button-on + span.ext_button {
 
 div.shadow_layer {
     display: none;
-    z-index: 10000;
+    z-index: 9999;
     position: fixed;
     width: 100%;
     height: 100%;
@@ -47,14 +47,31 @@ div.shadow_layer {
     opacity: 0.8;
 }
 
-div.view_layer {
-    z-index: 10001;
+span.close_layer {
+    z-index: 10000;
+    font-size: 28px;
+    color: #fff;
+    position: fixed;
+    top: 10px;
+    right: 17px;
+    cursor: pointer;
 }
 
-span.close_layer {
-    z-index: 10001;
+div.view_layer {
+    display: none;
+    z-index: 10002;
     position: fixed;
-    top: 7px;
-    right: 7px;
-    
+    width: 80%;
+    height: 80%;
+    /*margin-top: auto;
+    margin-bottom: auto;
+    margin-left: auto;
+    margin-right: auto;*/
+    vertical-align: middle;
 }
+
+img.view_img {
+    position: fixed;
+   
+}
+
